# RoboCup

./: .gitignore  20240613115542-null-vs-null.rcg  CMakeLists.txt  Player.cpp  Player.h  README.md  RetornoAZona.cpp  RetornoAZona.h  calculocoordenadas.cpp  calculocoordenadas.h  colocarjugadores.cpp  colocarjugadores.h  estructuras.h  funciones_de_juego.cpp  funciones_de_juego.h  holaMundo.cpp  logfile.txt  main  main.cpp  parseseemessages.cpp  parseseemessages.h  script.sh  stringutilities.cpp  stringutilities.h  stringutils.cpp  stringutils.h  tictoc.cpp  tictoc.h  types.cpp  types.h
Minimal-Socket/src/header/MinimalSocket/udp/: UdpSocket.h
